# reliability-copilot

./: .gitignore  PHASE0_TODO.md  PHASE1_TODO.md  PHASE2_TODO.md  README.md  plan.md  pyproject.toml
docs/: PHASE3_TODO.md  PHASE4_TODO.md  PRD.md  design.md
examples/: README.md  agent_trace.json  baseline.json  candidate.json  failures_for_clustering.json  langchain_trace.jsonl  langchain_trace_reco.json  openai_run_steps.json  openai_run_steps_reco.json
examples/demo/: README.md  promptfooconfig.yaml
examples/promptfoo-test/: promptfooconfig.yaml  result.json
reco/: __init__.py  __main__.py  cli.py  config.py
reco/core/: agent_analyzer.py  clusterer.py  comparator.py  eval_runner.py  gate.py  judgment.py  models.py  taxonomy.py  trace_converter.py
reco/formatters/: terminal.py
reco/providers/embeddings/: base.py  sentence_transformers.py
reco/providers/llm/: base.py  claude.py  gemini.py  openrouter.py
reco/storage/: __init__.py  base.py  sqlite.py
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_clusterer.py  test_comparator.py  test_config.py  test_eval_runner.py  test_formatter.py  test_gate.py  test_judgment.py  test_models.py  test_profile.py  test_providers.py  test_storage.py  test_taxonomy.py  test_trace_converter.py
