[project]
name = "reco"
version = "0.1.0"
description = "Reliability Copilot - AI judgment for prompt changes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.38",
    "numpy>=1.26.0",
]

[project.scripts]
reco = "reco.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reco"]
